# doc-processing

./: .env.example  .gitignore  CLAUDE.md  README.md  SESSION_CHANGES.md  claude_crash_md.md  collection_manager.py  docker-compose.yml  failed_files_report.json  failed_files_report.py  main.py  monitor_completion.py  monitor_live.py  policyqa_sync_manager.py  process_policyqa.py  process_remaining.py  process_with_qa_model.py  pyproject.toml  rebuild_with_qa_model.py  scan_files.py  start_policyqa_processing.py  switch_model.py  test_models.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
src/cli/: __main__.py
src/cli/commands/: chunking.py  monitor.py  monitor_progress.py  process.py  process_all.py  sync.py
src/config/: settings.py
src/core/: chunking.py  document_parser.py  embeddings.py  evaluator.py  file_monitor.py  form_descriptor.py  optimized_sync.py  sync_manager.py  text_cleaner.py  vector_store.py
src/models/: database.py  parsing.py  schemas.py
src/utils/: context_utils.py  file_utils.py  logging.py
tests/: test_chunking.py  test_context_utils.py  test_text_cleaner.py
