[project]
name = "doc-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "cohere>=5.15.0",
    "fastapi>=0.115.12",
    "openai>=1.84.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pymupdf>=1.26.0",
    "pytest>=8.4.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.2",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "sqlalchemy>=2.0.41",
    "typer>=0.16.0",
    "uvicorn>=0.34.3",
    "watchdog>=6.0.0",
]
